cabal-version:      2.4
name:               mqtt-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author: J. Mouwes, T. Albers, J. Vrooman

extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: lib
    exposed-modules: Utils, Broker, Client, Header
    -- other-modules:
    build-depends: base ^>=4.16.4.0, network >= 0.1.0.1, bytestring
    default-language: Haskell2010

executable mqtt-client
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, mqtt-haskell
    hs-source-dirs:   src-client
    default-language: Haskell2010

executable mqtt-broker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, mqtt-haskell
    hs-source-dirs:   src-broker
    default-language: Haskell2010
