cabal-version:      3.6
name:               mqtt-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author: J. Mouwes, T. Albers, J. Vrooman

extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: lib
    exposed-modules: Utils, Broker, Client, Packets, Chat.App
    other-modules: Packets.Simple, Packets.Builder, Packets.Parser, Packets.Abstract, Utils.Bits, Utils.BitParsing, Chat.Message, Chat.Terminal
    build-depends: base >=4.16.4.0, network >= 0.1.0.1, bytestring, containers, ansi-terminal
    default-language: Haskell2010

executable mqtt-client
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, mqtt-haskell
    hs-source-dirs:   src-client
    default-language: Haskell2010

executable mqtt-broker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, mqtt-haskell
    hs-source-dirs:   src-broker
    default-language: Haskell2010


test-suite mqtt-tests
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    other-modules:  Spec.Sanity, Arbitrary.Packets, Spec.Packets
    build-depends:  base, mqtt-haskell, tasty, tasty-quickcheck, tasty-hunit
