cabal-version:      3.6
name:               mqtt-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author: J. Mouwes, T. Albers, J. Vrooman

extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: lib
    exposed-modules: Utils, Broker, Client, Client.Connection, Client.MqttConfig, Client.Subscription, Packets, Socket
    other-modules: 
        Packets.Abstract,
        Packets.Builder, 
        Packets.CommandType,
        Packets.ConnackResponse,
        Packets.IO,
        Packets.Parser, 
        Packets.Simple, 

        Utils.BitParsing,
        Utils.Bits, 
        Utils.Map,
        Utils.Queue,
        Utils.MqttException,

        Socket.Base,
        Socket.Broker
    build-depends: base ^>=4.16.4.0, network >= 0.1.0.1, bytestring, containers >= 0.6.5.1
    default-language: Haskell2010

executable mqtt-client
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Chat.App
        Chat.Message
        Chat.Terminal

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, mqtt-haskell, async, ansi-terminal
    hs-source-dirs:   src-client
    default-language: Haskell2010

executable mqtt-broker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, mqtt-haskell
    hs-source-dirs:   src-broker
    default-language: Haskell2010


test-suite mqtt-tests
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test
    other-modules:  
      Spec.Sanity, 
      Spec.Packets, 
      Arbitrary, 
      Arbitrary.Packets, 
      Arbitrary.Message, 
      Arbitrary.QoS, 
    build-depends:  base, mqtt-haskell, tasty, tasty-quickcheck, tasty-hunit, network
